src/ui/radarr_ui/indexers/snapshots/managarr__ui__radarr_ui__indexers__indexers_ui_tests__tests__snapshot_tests__indexers_ui_renders_indexer_settings_over_indexers.snap
---
source: src/ui/radarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Indexer ▼                            RSS                   Automatic Search      Interactive Search    Priority              Tags                                 
=> Test Indexer                         Enabled               Enabled               Enabled               25                    alex                                 
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                         ╭───────────────────────────────────────  Configure All Indexer Settings  ────────────────────────────────────────╮                         
                         │                                                                                                                 │                         
                         │                            ╭─────────────────────────╮                            ╭─────────────────────────╮   │                         
                         │  Minimum Age (minutes) ▴▾: │12                       │  Availability Delay (days) │0                        │   │                         
                         │                            ╰─────────────────────────╯                            ╰─────────────────────────╯   │                         
                         │                            ╭─────────────────────────╮                            ╭─────────────────────────╮   │                         
                         │       Retention (days) ▴▾: │30                       │  RSS Sync Interval (minutes│60                       │   │                         
                         │                            ╰─────────────────────────╯                            ╰─────────────────────────╯   │                         
                         │                            ╭─────────────────────────╮                            ╭─────────────────────────╮   │                         
                         │      Maximum Size (MB) ▴▾: │1234                     │  Whitelisted Subtitle Tags:│eng                      │   │                         
                         │                            ╰─────────────────────────╯                            ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭───╮                         │                         
                         │      Prefer Indexer Flags: │ ✔ │                            Allow Hardcoded Subs: │ ✔ │                         │                         
                         │                            ╰───╯                                                  ╰───╯                         │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                            ╭───────────────────────────╮╭──────────────────────────╮                            │                         
                         │                            │           Save            ││          Cancel          │                            │                         
                         │                            ╰───────────────────────────╯╰──────────────────────────╯                            │                         
                         ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
